fixed weird wrapping issue in programs

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #fff url("../img/preloader.svg") no-repeat cover center;
+  background: #fff url("../images/preloader.svg") no-repeat cover center;
 }
 
 /* Back to top button */
